ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: helloworld.example.com
    http:
      paths:
      - backend:
          serviceName: the-service
          servicePort: 8080
